--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <section class="row">
-            <div class="col-12"
+            <div class="col-12"></div>
             <div class="card">
                 <div class="card-body">
                     <h1>О нас</h1>
@@ -18,5 +18,6 @@
         </div>
         </section>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
